Made the icons bounce. Turned the MapTypeId to SATELLITE.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Simple Map</title>
+    <title>southEast mapOfCapitals</title>
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
     <style>
@@ -22,13 +22,14 @@
         top: 10px;
         left: 25%;
         z-index: 5;
-        background-color: #fff;
+        background-color: #aadaff;
         padding: 5px;
-        border: 1px solid #999;
+        border: 5px solid #999;
         text-align: center;
         font-family: 'Roboto','sans-serif';
         line-height: 30px;
         padding-left: 10px;
+        border-radius: 12px;
       }
 
     </style>
@@ -39,7 +40,6 @@
         <div id="floating-panel">
                 <input onclick="clearMarkers();" type=button value="Hide Markers">
                 <input onclick="showMarkers();" type=button value="Show All Markers">
-                <input onclick="deleteMarkers();" type=button value="Delete Markers">
               </div>
           
     <div id="map">  
